# embucket-snowplow

./: .gitignore  README.md  dbt_project.yml  profiles.yml.example  pyproject.toml
deploy/: embucket-lambda.cfn.yaml
models/: sources.yml
patches/snowplow_utils/macros/base/: base_create_snowplow_events_this_run.sql
patches/snowplow_web/models/base/scratch/snowflake/: snowplow_web_base_events_raw_this_run.sql  snowplow_web_base_events_this_run.sql  snowplow_web_base_events_winners_this_run.sql
patches/snowplow_web/models/user_mapping/: snowplow_web_user_mapping.sql
scripts/: apply_oom_patch.sh  benchmark_incremental.py  copy_data.sql  create_table.sql  ctas_from_glue.sql  embucket_client.py  embucket_reset_manifest.py  embucket_snapshot_derived.py  events_0416_select.sql  fix_context_parquet.py  generate_snowplow_batches.py  load_data.py  load_from_glue.py  parity.py  parity_deep.py  parity_self.py  parity_self_embucket.py  patch_snowplow.sh  snowflake_clone_schema.py  snowflake_refresh.py  snowflake_reset_manifest.py  snowflake_setup.py  test_merge_partition.py  verify_oom_patch.sh
scripts/tpch/: create_tables.sql  load_tpch_data.py  run_tpch_queries.py
specs/: 2026-04-17-athena-to-s3tables-source-design.md  2026-04-22-embucket-snowflake-investigation.md  2026-04-22-embucket-snowflake-parity-design.md  2026-04-22-embucket-snowflake-parity-plan.md  2026-04-22-parity-results.md  2026-04-24-embucket-patch-run-results.md  2026-04-24-snowflake-oom-patch-equivalence-design.md  2026-04-24-snowflake-oom-patch-equivalence-results.md
tests/: test_parity.py
(+13 files in other folders)
