[project]
name = "embucket-example"
version = "0.1.0"
description = "Embucket demo: Snowplow web analytics with dbt"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "dbt-core>=1.11.0,<2.0",
    "dbt-embucket>=0.1.2",
    "fastavro>=1.9.0",
    "pyarrow>=20.0.0",
    "s3fs>=2025.3.0",
]
